--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,11 +2,11 @@ steps:
 # Build and tag the Docker image of tegola
 - name: 'gcr.io/cloud-builders/docker'
   id: Build
-  args: [ 'build', '-t', 'europe-west1-docker.pkg.dev/terraform-mvt/main-openindoor-repo/update-openindoor-db:tours', '.' ]  
+  args: [ 'build', '-t', 'europe-west1-docker.pkg.dev/terraform-mvt/main-openindoor-repo/update-openindoor-db:bretagne', '.' ]  
 # Push the Docker image to Artifact repository
 - name: 'gcr.io/cloud-builders/docker'
   id: Push
-  args: ['push', 'europe-west1-docker.pkg.dev/terraform-mvt/main-openindoor-repo/update-openindoor-db:tours']
+  args: ['push', 'europe-west1-docker.pkg.dev/terraform-mvt/main-openindoor-repo/update-openindoor-db:bretagne']
 # Deploy the image to Cloud Run
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: gcloud
@@ -15,7 +15,7 @@ steps:
   - 'deploy'
   - 'update-db'
   - '--image'
-  - 'europe-west1-docker.pkg.dev/terraform-mvt/main-openindoor-repo/update-openindoor-db:tours'
+  - 'europe-west1-docker.pkg.dev/terraform-mvt/main-openindoor-repo/update-openindoor-db:bretagne'
   - '--region'
   - 'europe-west1'
   - '--platform'
